# petdjango

./: .env  .gitignore  Dockerfile  compose.yaml  pyproject.toml
nginx/: config.conf
src/main/: settings.py  urls.py
